--- a/appFinal/templates/appFinal/cargarDatosExperiencia.html
+++ b/appFinal/templates/appFinal/cargarDatosExperiencia.html
@@ -1,10 +1,14 @@
+{% extends "appFinal/base.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 {% if miFormulario2.errors %}
 <p style="color: red;">Estan mal los datos, revisar</p>
 {% endif %}
-
+<h1>Cargar Experiencia</h1>
 <form action="" method="POST">{% csrf_token %}
     <table>
         {{miFormulario2.as_table}}
     </table>
-    <input type="submit", value="Enviar">
+    <input type="submit", value="Agregar">
 </form>
+{% endblock contenidoQueCambia %}
