--- a/appFinal/templates/appFinal/cargarDatosEstudios.html
+++ b/appFinal/templates/appFinal/cargarDatosEstudios.html
@@ -1,10 +1,14 @@
+{% extends "appFinal/base.html" %}
+{% load static %}
+{% block contenidoQueCambia %}
 {% if miFormulario.errors %}
 <p style="color: red;">Estan mal los datos, revisar</p>
 {% endif %}
 <h1>Cargar Estudios</h1>
 <form action="" method="POST">{% csrf_token %}
     <table>
-        {{miFormulario.as_table}}
+        {{miFormulario1.as_table}}
     </table>
-    <input type="submit", value="Enviar">
+    <input type="submit", value="Agregar">
 </form>
+{% endblock contenidoQueCambia %}
